<resources>
    <string name="app_name">StocksApp</string>
    <string name="image_view_content_description">ImageView Content Description</string>
    <string name="portfolio">Portfolio</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="current_value">Current Value*</string>
    <string name="total_investment">Total Investment*</string>
    <string name="today_s_profit_loss"><![CDATA[Today\'s Profit & Loss]]></string>
    <string name="profit_loss"><![CDATA[Profit & Loss*]]></string>
    <string name="net_qty">NET QTY:</string>
    <string name="ltp">LTP:</string>
    <string name="pnl">PNL :</string>
</resources>